test/parser/positive/ReferenceCasts.java
public class ReferenceCasts {
  public ReferenceCasts() {}
  public ReferenceCasts m(Object x) {
    return (ReferenceCasts)x;
  }
}
