test/parser/negative/IncrementAndDecrement.java
public class IncrementAndDecrement {
    public IncrementAndDecrement() {}
  public int m(int x) {
    x++; x--; ++x; return --x;
  }
}
